fix overflow and icon size

--- a/src/output.css
+++ b/src/output.css
@@ -231,6 +231,9 @@
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
+  .w-23 {
+    width: calc(var(--spacing) * 23);
+  }
   .w-25 {
     width: calc(var(--spacing) * 25);
   }
@@ -281,6 +284,15 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .overflow-clip {
+    overflow: clip;
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .overflow-y-auto {
+    overflow-y: auto;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
